--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-navigation/stack": "^6.3.8",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^5.0.1",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
